--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
+
 body, html {
   margin: 0;
   padding: 0;
+  background-color: #e1e1e1;
 }
 #root {
   margin: 0;
@@ -22,24 +24,54 @@ h1 {
   padding: 2rem 2rem 7rem 2rem;  
 }
 .main  {
-  width: 97%;
+  width: 96%;
   margin: 0 auto;
   background-color: #fefefe;
   transform: translateY(-6rem);
-  padding: 1rem auto;
-  padding-top: 3rem;
+  padding: 10% 5%;
+  background-color: whitesmoke;
 }
 
-select, input {
+.startPanel select, .startPanel input {
   display: block;
   width: 90%;
   max-width: 475px;
 }
-input {
+.startPanel input[type='number'] {
   width: 88%;
 }
 
-@media only screen and (min-width: 360px) {
+.questionPanel .option {
+  margin: 3% 3% 0% 3%;
+}
+.questionPanel, .startPanel {
+  border: outset 2px;
+  padding: 5%;
+  background-color: white;
+}
+.formItem {
+  margin: 3% 1%;
+}
+
+.score {
+  border: inset red 1px;
+  padding: 2%;
+  background: mistyrose;
+}
+.nav {
+  margin-top: 50px;
+  width: 100%;
+}
+.nav > button {
+  width: 20%;
+  margin: 0% 5%;
+  min-width: fit-content;
+}
+@media screen and (min-width: 360px) {
+  .h1 {
+    font-size: 5rem;
+    padding: 3rem 2rem 10rem 2rem;
+  }
   .main { 
     width: 80%;
   }
